--- a/covid-19-tracker/src/App.css
+++ b/covid-19-tracker/src/App.css
@@ -24,6 +24,10 @@ body {
   justify-content: space-between;
 }
 
+.app__left {
+  flex: 0.9;
+}
+
 @media (max-width: 990px) {
   .app {
     flex-direction: column;
